[tool.poetry]
name = "gdrive-duplicates-cleaner"
version = "0.1.0"
description = "Manage and remove duplicates from Google Drive"
authors = ["Anderson Damasceno <anderdam@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.1.3"
pyspark = "^3.5.0"
requests = "^2.31.0"
tqdm = "^4.66.1"
toml = "^0.10.2"
google-api-python-client = "^2.109.0"
google-auth-httplib2 = "^0.1.1"
google-auth-oauthlib = "^1.1.0"
pydrive2 = "^1.17.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.11.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
